--- a/dashboard.html
+++ b/dashboard.html
@@ -192,6 +192,7 @@
    
 </style>
 <body>
+     <div id="loader-container"></div>
     <div class="body">
         <div id="menu_bar" class="menu_bar">
             <div class="menu_bar_header">
@@ -353,6 +354,7 @@
 </body>
 
 </html>
+
 
 
 
