--- a/dashboard.html
+++ b/dashboard.html
@@ -17,7 +17,7 @@
         align-items: center;
         background-color: rgb(185, 185, 247);
         padding: 10px 20px;
-        background: linear-gradient(rgba(88, 87, 87, 0.5)),url(/images/background.jpg);
+        background: linear-gradient(rgba(88, 87, 87, 0.5)),url(images/background.jpg);
         background-position: center;
         background-repeat: no-repeat;
         background-size:cover;
@@ -354,6 +354,7 @@
 </body>
 
 </html>
+
 
 
 
