--- a/registerBusiness.html
+++ b/registerBusiness.html
@@ -20,7 +20,7 @@
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        margin-top: 150px;
+        padding-top: 200px;
        
     }
     .main_Body input{
@@ -45,7 +45,8 @@
     .main_Body img{
         width: 200px;
         height: 200px;
-        margin-top: 50px;
+        margin-top: 20px;
+         object-fit:contain;
     }
     .buttons button{
         border: none;
@@ -65,9 +66,9 @@
         color: white;
     }
     .main_Body label{
-        margin-top: 60px;
+        margin-top: 10px;
         align-self: flex-start;
-        margin-left: 30px;
+        margin-left: 10%;
     }
     .loader{
         position: absolute;
@@ -124,7 +125,7 @@
 </style>
 <body id="body">
     <div class="main_Body">
-        <img id="logoImg" src="/images/E-T (1).png" alt="">
+        <img id="logoImg" src="images/E-T (1).png" alt="">
         <label for="">Select Business Logo</label>
         <input id="logo" type="file">
         <input id="bisName" type="text" placeholder="Business Name" maxlength="15">
@@ -382,6 +383,7 @@ cleanText("My Business @ Name!");
 </body>
 
 </html>
+
 
 
 
