--- a/registerBusiness.html
+++ b/registerBusiness.html
@@ -69,6 +69,7 @@
         margin-top: 10px;
         align-self: flex-start;
         margin-left: 10%;
+         font-size: 0.8rem;
     }
     .loader{
         position: absolute;
@@ -126,7 +127,7 @@
 <body id="body">
     <div class="main_Body">
         <img id="logoImg" src="images/E-T (1).png" alt="">
-        <label for="">Select Business Logo</label>
+        <label for="">Upload a brand product(In a transparent background)</label>
         <input id="logo" type="file">
         <input id="bisName" type="text" placeholder="Business Name" maxlength="15">
         <input id="bizSlogan" type="text" placeholder="Business Slogan">
@@ -383,6 +384,7 @@ cleanText("My Business @ Name!");
 </body>
 
 </html>
+
 
 
 
