--- a/registerBusiness.html
+++ b/registerBusiness.html
@@ -20,7 +20,7 @@
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        padding-top: 200px;
+        padding-top: 180px;
        
     }
     .main_Body input{
@@ -126,7 +126,7 @@
 </style>
 <body id="body">
     <div class="main_Body">
-        <img id="logoImg" src="images/E-T (1).png" alt="">
+        <img id="logoImg" src="images/add item.svg" alt="">
         <label for="">Upload a brand product(In a transparent background)</label>
         <input id="logo" type="file">
         <input id="bisName" type="text" placeholder="Business Name" maxlength="15">
@@ -384,6 +384,7 @@ cleanText("My Business @ Name!");
 </body>
 
 </html>
+
 
 
 
