--- a/registerBusiness.html
+++ b/registerBusiness.html
@@ -70,6 +70,7 @@
         align-self: flex-start;
         margin-left: 10%;
          font-size: 0.8rem;
+         margin-bottom: -20px;
     }
     .loader{
         position: absolute;
@@ -401,6 +402,7 @@ cleanText("My Business @ Name!");
 </body>
 
 </html>
+
 
 
 
