--- a/productListPage.html
+++ b/productListPage.html
@@ -114,8 +114,9 @@
         }
         .card img{
             width: 150px;
-            height: 200px;
+            height: 150px;
             border-radius: 10px;
+            object-fit: contain;
         }
         .card{
             background-color: rgb(241, 235, 235);
@@ -418,6 +419,7 @@ for (let i = 0; i < products.length; i += 2) {
 </body>
 
 </html>
+
 
 
 
