--- a/plan.html
+++ b/plan.html
@@ -65,17 +65,21 @@
     .sub{
          background-color: purple;
          color: white;
-         padding: 5px 50px;
+         padding: 5px 30px;
          border-radius: 20px;
-         font-size: 1.2rem;
+         font-size: 1.0rem;
+         width: 60%;
+         text-align:center;
     }
     .planCard button{
-        padding: 10px 100px;
-        font-size: 1.2rem;
+        padding: 10px 10px;
+        font-size: 1.0rem;
         background-color:purple;
         color: white;
         border: none;
+        width: 60%;
         border-radius: 10px;
+        text-align: center;
     }
     .planCard li{
         margin-top: 10px;
@@ -390,6 +394,7 @@ function processPayment(plan){
 </body>
 
 </html>
+
 
 
 
