--- a/plan.html
+++ b/plan.html
@@ -167,10 +167,30 @@
     .show{
         transform: scale(1);
     }
+        .top{
+        display: flex;
+        width: 90%;
+        text-align: center;
+        padding: 0 30px;
+        margin: 0 30px;
+        justify-content: center;
+        align-items: center;
+        background-color: rebeccapurple;
+        color: white;
+        font-size: 1rem;
+        border-bottom-left-radius: 50%;
+        border-bottom-right-radius: 50%;
+    }
+    .top h4{
+        text-align: center;
+    }
     
     
     </style>
     <div class="planDisplay">
+    <div class="top">
+            <h4> Choose out of our set plans to get your business started </h4>
+        </div>
            <div class="planCard">
              <h1>Monthly Plan</h1>
              <h2>&#8358; 999</h2>
@@ -394,6 +414,7 @@ function processPayment(plan){
 </body>
 
 </html>
+
 
 
 
