--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             width: 100%;
             height: 100vh;
             overflow-y: auto;
+            overflow-x: hidden;
         }
         .header{
             background-color: white;
@@ -299,6 +300,7 @@
 </body>
 
 </html>
+
 
 
 
