--- a/productListPage.html
+++ b/productListPage.html
@@ -434,7 +434,7 @@ var orderBtns = document.querySelectorAll("#order");
              businessOwner: ceoName,
              url : url,
              contact : phoneNumber,
-             businessName : name.textContent
+             businessName : name;
 
           }
           localStorage.setItem("productPageData",JSON.stringify(data))
@@ -448,6 +448,7 @@ var orderBtns = document.querySelectorAll("#order");
 </body>
 
 </html>
+
 
 
 
