--- a/productListPage.html
+++ b/productListPage.html
@@ -438,7 +438,7 @@ var orderBtns = document.querySelectorAll("#order");
 
           }
           localStorage.setItem("productPageData",JSON.stringify(data))
-            window.location.href = "singlePage.html"
+            window.location.href = "./singleProductPage.html"
     })
     
     
@@ -448,6 +448,7 @@ var orderBtns = document.querySelectorAll("#order");
 </body>
 
 </html>
+
 
 
 
