--- a/index.html
+++ b/index.html
@@ -248,39 +248,34 @@
                   </div>
                    
                 </div>
-                <p>Choose from 33 professional templates • Customize fonts • Download as PDF instantly</p>
+                <p>Everything Your Business Needs in One Website</p>
                 <div class="middle_body">
                   <h2>Why Choose Our Invoice Generator?</h2>
                   <div class="card_wrapper">
                     <div class="card">
                       <i><img src="/images/lighting fast.svg" alt=""></i>
-                      <h3>33 Professional Templates</h3>
+                      <h3>Unique Business Website</h3>
+                      <p>Get a custom-designed website built specifically for your brand — fast, responsive, and professional.</p>
+                    </div>
+                      <div class="card">
+                      <i></i>
+                      <h3>Smart Invoice Generation</h3>
+                      <p>No manual calculations. Your website automatically calculates prices, totals, and costs accurately — every time.</p>
+                    </div>
+                      <div class="card">
+                      <i></i>
+                      <h3>WhatsApp Link Generator</h3>
+                      <p>Turn visitors into customers instantly. One click connects them to your WhatsApp with a pre-filled message, ready to order.</p>
+                    </div>
+                      <div class="card">
+                      <i></i>
+                      <h3> Professional Templates</h3>
                       <p>Choose from modern, classic, and creative designs tailored for every industry</p>
                     </div>
                       <div class="card">
                       <i></i>
-                      <h3>33 Professional Templates</h3>
-                      <p>Choose from modern, classic, and creative designs tailored for every industry</p>
-                    </div>
-                      <div class="card">
-                      <i></i>
-                      <h3>33 Professional Templates</h3>
-                      <p>Choose from modern, classic, and creative designs tailored for every industry</p>
-                    </div>
-                      <div class="card">
-                      <i></i>
-                      <h3>33 Professional Templates</h3>
-                      <p>Choose from modern, classic, and creative designs tailored for every industry</p>
-                    </div>
-                      <div class="card">
-                      <i></i>
-                      <h3>33 Professional Templates</h3>
-                      <p>Choose from modern, classic, and creative designs tailored for every industry</p>
-                    </div>
-                      <div class="card">
-                      <i></i>
-                      <h3>33 Professional Templates</h3>
-                      <p>Choose from modern, classic, and creative designs tailored for every industry</p>
+                      <h3>And Much More</h3>
+                      <p>Powerful tools designed to help your business grow, convert more customers, and operate efficiently.</p>
                     </div>
                   </div>
 
@@ -300,6 +295,7 @@
 </body>
 
 </html>
+
 
 
 
