--- a/index.html
+++ b/index.html
@@ -217,10 +217,11 @@
                 Business Listing Website
                 </h1>
                 <p class="hero_subtext">
-                  Discover Trusted Businesses Near You — <strong>All in One Place.</strong>
-                   Find verified local services, compare options, and connect instantly. Your perfect business is just a search away.<br>
+                  Build a powerful online presence that does more than just look good.
+                  We create — <strong>fully functional business websites.</strong>
+                   that help you sell, calculate, invoice, and connect with customers effortlessly.<br>
                     Generate <strong>beautiful and professional</strong>
-                  invoice, download as <strong>PDF instantly</strong> and share with your clients
+                  invoice, download as <strong>PDF instantly.</strong>
                   
                     </p>
                     <div class="headerbtn">
@@ -260,9 +261,9 @@
                   </div>
                    
                 </div>
-                <p>Everything Your Business Needs in One Website</p>
+                <p>Your website becomes your digital office, working for you 24/7.</p>
                 <div class="middle_body">
-                  <h2>Why Choose Our Invoice Generator?</h2>
+                  <h2>Everything Your Business Needs in One Website</h2>
                   <div class="card_wrapper">
                     <div class="card">
                       <i><img src="/images/lighting fast.svg" alt=""></i>
@@ -317,6 +318,7 @@
 </body>
 
 </html>
+
 
 
 
