--- a/index.html
+++ b/index.html
@@ -204,6 +204,28 @@
                 width: 100%;
                 margin-bottom: 10px;
               }
+         .footer h3{
+                width: 100%;
+                text-align: center;
+                color: purple;
+                font-weight: 800;
+              }
+              .footer p{
+                width: 100%;
+                text-align: center;
+                margin-top: -13px;
+              }
+              .footer h5{
+                margin-left: 10px;
+                margin-top: -15px;
+              }
+              .right{
+                background-color: grey;
+                text-align: center;
+                color: white;
+                padding: 1px;
+                letter-spacing: 0.5px;
+              }
     </style>
   <div class="main_container">
     <div class="header">
@@ -306,6 +328,17 @@
             
           </ul>
         </div>
+       <div class="footer">
+            <h3>Take the First Step Towards Business Growth</h3>
+            <p>Your customers are online — your business should be too.
+              Let us help you build a website that works, sells, and scales with your business.</p>
+              <h5>👉 Get Started Today</h5>
+              <h5>👉 Take Your Business Online Now</h5>
+              <h5>👉 Biznet is here to help</h5>
+        </div>
+        <div class="right">
+          <p>(c) right reserved @ E-Tech-Software 2025</p>
+        </div>
   </div>
     <script type="module" src="./fireBase.js"></script>
     <script type="module">
@@ -318,6 +351,7 @@
 </body>
 
 </html>
+
 
 
 
