--- a/index.html
+++ b/index.html
@@ -288,17 +288,17 @@
                   <h2>Everything Your Business Needs in One Website</h2>
                   <div class="card_wrapper">
                     <div class="card">
-                      <i><img src="/images/lighting fast.svg" alt=""></i>
+                      <i><img src="images/globe-solid-full.svg" alt=""></i>
                       <h3>Unique Business Website</h3>
                       <p>Get a custom-designed website built specifically for your brand — fast, responsive, and professional.</p>
                     </div>
                       <div class="card">
-                      <i></i>
+                      <i><img src="images/file-invoice-dollar-regular-full.svg" alt=""></i>
                       <h3>Smart Invoice Generation</h3>
                       <p>No manual calculations. Your website automatically calculates prices, totals, and costs accurately — every time.</p>
                     </div>
                       <div class="card">
-                      <i></i>
+                      <i><img src="images/whatsapp-brands-solid-full.svg" alt=""></i>
                       <h3>WhatsApp Link Generator</h3>
                       <p>Turn visitors into customers instantly. One click connects them to your WhatsApp with a pre-filled message, ready to order.</p>
                     </div>
@@ -351,6 +351,7 @@
 </body>
 
 </html>
+
 
 
 
