--- a/index.html
+++ b/index.html
@@ -142,6 +142,7 @@
                 margin: 10px;
                 width:200px;
                   height:200px;
+                  object-fit: contain;
                 
               
               }
@@ -361,6 +362,7 @@
 </body>
 
 </html>
+
 
 
 
