--- a/index.html
+++ b/index.html
@@ -314,12 +314,12 @@
                       <p>Turn visitors into customers instantly. One click connects them to your WhatsApp with a pre-filled message, ready to order.</p>
                     </div>
                       <div class="card">
-                      <i></i>
+                      <i><img src="images/anchor-solid-full.svg" alt=""></i>
                       <h3> Professional Templates</h3>
                       <p>Choose from modern, classic, and creative designs tailored for every industry</p>
                     </div>
                       <div class="card">
-                      <i></i>
+                      <i><img src="images/bolt-solid-full.svg" alt=""></i>
                       <h3>And Much More</h3>
                       <p>Powerful tools designed to help your business grow, convert more customers, and operate efficiently.</p>
                     </div>
@@ -362,6 +362,7 @@
 </body>
 
 </html>
+
 
 
 
