--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                 margin: 10px;
                 width:400px;
                   height:400px;
-                  object-fit: contain;
+                  object-fit: cover;
                 
               
               }
@@ -362,6 +362,7 @@
 </body>
 
 </html>
+
 
 
 
