--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
                     </div>
             </div>
             <div class="body_section">
-                <h2>Professional Invoice Examples</h2>
+                <h2>Professional Samples</h2>
                 <div class="scrollImg">
                   <div class="image">
                     <img class="img" src="images/Screenshot 2025-11-26 223212.png" alt="">  
@@ -362,6 +362,7 @@
 </body>
 
 </html>
+
 
 
 
