--- a/index.html
+++ b/index.html
@@ -235,9 +235,9 @@
     </style>
   <div class="main_container">
     <div class="header">
-        <li>Menu</li>
+        <li>Biznet</li>
          <img src="images/E-T (1).png" alt="">
-        <li>Log In</li>
+        <li>Register</li>
     </div>
     <div class="body">
         <div class="body_header">
@@ -365,6 +365,7 @@
 </body>
 
 </html>
+
 
 
 
