--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
               <h5>👉 Biznet is here to help</h5>
         </div>
         <div class="right">
-          <p>(c) right reserved @ E-Tech-Software 2025</p>
+          <p>(c) All right reserved @ E-Tech-Software 2025</p>
         </div>
   </div>
     <script type="module" src="./fireBase.js"></script>
@@ -365,6 +365,7 @@
 </body>
 
 </html>
+
 
 
 
