--- a/index.html
+++ b/index.html
@@ -216,7 +216,9 @@
               .footer p{
                 width: 100%;
                 text-align: center;
-                margin-top: -13px;
+                margin-top: -10px;
+                margin-bottom: 10px;
+                  
               }
               .footer h5{
                 margin-left: 10px;
@@ -365,6 +367,7 @@
 </body>
 
 </html>
+
 
 
 
