--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Biznet</title>
 </head>
 <body>
     <style>
@@ -367,6 +367,7 @@
 </body>
 
 </html>
+
 
 
 
