--- a/plan.html
+++ b/plan.html
@@ -316,11 +316,11 @@
  function pay(amount,plan) {
 
     let paymentReference = "REF-" + Date.now();   // unique reference
-
+      var money = 200
        let handler = PaystackPop.setup({
-        key: "pk_test_9c90132682faee2d1b3d42ca1e65a35ec9fb54dd", // ✅ YOUR PUBLIC KEY
+        key: "pk_live_d2d0170419093ac4377d4192ba52c2de83233e7e", // ✅ YOUR PUBLIC KEY
         email: client.email, // required
-        amount: amount * 100, // ₦5,000 (Paystack uses kobo)
+        amount: money * 100, // ₦5,000 (Paystack uses kobo)
         currency: "NGN",
 
         ref: paymentReference,
@@ -403,7 +403,7 @@ function processPayment(plan){
 
     // verify payment here
     function verifyPayment(reference,plan) {
-    fetch("https://script.google.com/macros/s/AKfycbz95TCWcKQvdh7WxT_ZOC-3-B8OBCX1UgATHeLh49VtXDv6H5OfcmNBgiXEdWob_A/exec", {
+    fetch("https://script.google.com/macros/s/AKfycbzmXYxKo0SfjJR9dfMbgEZGDGKsb6i99iy59kifsSs_8yBFBf3qCAPUAtbu3KmzKA/exec", {
         method: "POST",
         body: JSON.stringify({
             reference: reference
@@ -427,6 +427,7 @@ function processPayment(plan){
 </body>
 
 </html>
+
 
 
 
