--- a/plan.html
+++ b/plan.html
@@ -247,6 +247,7 @@
                 <li>Direct WhatsApp Messaging</li>
                 <li>Free Version Auto Update</li>
                 <li>Free Technical Support</li>
+                <li>Dual Platform: convert to also work as native mobile app for easy access by customers</li>
                 <li>Visual Payment Module. <strong>Automate payment</strong>  process even while you <strong>sleep </strong> 
                 </li>
                 <li><strong>A system worth over &#8358; 176,000</strong></li>
@@ -426,6 +427,7 @@ function processPayment(plan){
 </body>
 
 </html>
+
 
 
 
