--- a/business/root.html
+++ b/business/root.html
@@ -207,7 +207,7 @@
             <h3>Top Businesses</h3>
             <div class="products">
                 <div class="ppcard">
-                    <img src="" alt="">
+                    <img src="images/E-T (1).png" alt="">
                     <h5>E-Tech Software</h5>
                     <h4>08147309259</h4>
                 </div>
@@ -334,6 +334,7 @@
 </body>
 
 </html>
+
 
 
 
