--- a/business/root.html
+++ b/business/root.html
@@ -212,12 +212,12 @@
                     <h4>08147309259</h4>
                 </div>
                  <div class="ppcard">
-                    <img src="" alt="">
+                    <img src="images/store.svg" alt="">
                     <h5>Mavel Clothings</h5>
                     <h4>0814563563</h4>
                 </div>
                  <div class="ppcard">
-                    <img src="" alt="">
+                    <img src="images/store.svg" alt="">
                     <h5>Rnb PaperWorks</h5>
                     <h4>0917464837</h4>
                 </div>
@@ -334,6 +334,7 @@
 </body>
 
 </html>
+
 
 
 
